# fate-of-snotels

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
fos/: cli.py  constants.py  data.py  dirs.py  models.py  plotting.py  util.py
nbs/: ASOdata.ipynb  all-MLR.ipynb  cjr-dev.ipynb  dev.py  elevation_cdf.ipynb  fig1.ipynb  marianne-dev.ipynb  models-marianne.ipynb  style.mplstyle  template-may2023.ipynb
nbs/data/ukesm/: snotel_metrics.npy  wrf_bas_metrics.npy  wrf_pt_metrics.npy  wrf_pt_metrics_2.npy  wrfbasin_metrics_AdinMtn301.csv  wrfbasin_metrics_AlbroLake916.csv  wrfbasin_metrics_ArbuckleMtn304.csv  wrfbasin_metrics_BearBasin319.csv  wrfbasin_metrics_BeaverReservoir331.csv  wrfbasin_metrics_BlackMesa1185.csv  wrfbasin_metrics_BlindPark354.csv  wrfbasin_metrics_Brumley369.csv  wrfbasin_metrics_CampJackson383.csv  wrfbasin_metrics_Canyon384.csv  wrfbasin_metrics_CarsonPass1067.csv  wrfbasin_metrics_ColeCanyon982.csv  wrfbasin_metrics_Columbine408.csv  wrfbasin_metrics_Daniels-Strawberry435.csv  wrfbasin_metrics_DisasterPeak445.csv  wrfbasin_metrics_DonkeyReservoir452.csv  wrfbasin_metrics_ElkPeak1106.csv  wrfbasin_metrics_FawnCreek476.csv  wrfbasin_metrics_FishLake478.csv  wrfbasin_metrics_ForestdaleCreek1049.csv  wrfbasin_metrics_FredonyerPeak1277.csv  wrfbasin_metrics_FrohnerMeadow487.csv  wrfbasin_metrics_GardenCitySummit1114.csv  wrfbasin_metrics_GraniteCreek497.csv  wrfbasin_metrics_HansenSawmill512.csv  wrfbasin_metrics_HappyJack969.csv  wrfbasin_metrics_HaydenFork517.csv  wrfbasin_metrics_JackwhackerGulch935.csv  wrfbasin_metrics_KingMountain558.csv  wrfbasin_metrics_LostLake600.csv  wrfbasin_metrics_Mancos905.csv  wrfbasin_metrics_ManyGlacier613.csv  wrfbasin_metrics_Marquette616.csv  wrfbasin_metrics_MaverickFork617.csv  wrfbasin_metrics_McknightCabin1048.csv  wrfbasin_metrics_MesaLakes622.csv  (+805 more)
test/: dirs.py  util_test.py
